--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <h>Distance Calculator</h>
+    <h1>Distance Calculator</h1>
   </head>
   <body>
     <form action="/" method="POST">
@@ -15,5 +15,26 @@
     {% if distance %}
     <p>Distance: {{distance}}</p>
     {% endif %}
+
+    <div id="map"></div>
+
+    <script src="src="https://www.google.com/maps/@?api=1&map_action=map&center=40.7128,-74.0060&zoom=12"></script>
+
+    <script>
+      function initMap() {
+        var map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 40.7218, lng: -74.0060},
+          zoom: 12
+        });
+
+        var marker = new google.maps.Marker({
+          position: {lat: 40.7128, lng: -740060},
+          map: map,
+          title: 'New York City'
+        });
+      }
+
+      google.maps.event.addDomListener(window, 'load', initMap);
+    </script>
   </body>
 </html>
