--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -4,21 +4,19 @@
   </head>
   <body>
     <form action="/" method="POST">
-    Point A(°)
-    <input type="text" name="lat1">
-    <input type="text" name="lon1"><br>
-    Point B(°)
-    <input type="text" name="lat2">
-    <input type="text" name="lon2"><br>
+    Point A(Latitude, Longitude):
+    <input type="text" name="pointA"><br>
+    Point B(Latitude, Longitude):
+    <input type="text" name="pointB"><br>
     <button type="submit" value="submit">Calculate</button>
     </form>
     {% if distance %}
-    <p>Distance: {{distance}}</p>
+    <p>Distance: {{ distance }}</p>
     {% endif %}
 
     <div id="map"></div>
 
-    <script src="src="https://www.google.com/maps/@?api=1&map_action=map&center=40.7128,-74.0060&zoom=12"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZrdf_OAm5a9UER4e5omvYkgp8ttHhLxE&callback=initMap" async defer></script>
 
     <script>
       function initMap() {
@@ -28,7 +26,7 @@
         });
 
         var marker = new google.maps.Marker({
-          position: {lat: 40.7128, lng: -740060},
+          position: {lat: 40.7128, lng: -74.0060},
           map: map,
           title: 'New York City'
         });
